--- a/juego.html
+++ b/juego.html
@@ -11,10 +11,10 @@
 
 <body>
     <audio src="imgs/Paint it black.mp3" autoplay loop >
-      </audio>
-      <script>
+    </audio>
+    <script>
         document.querySelector("audio").volume = 0.1;
-      </script>
+    </script>
     <div>
         <style>
             body {
@@ -28,14 +28,14 @@
                 <strong>J</strong>,
                 <strong>K</strong> <br>para tocar las
                 notas.</p></strong>
-        <p style="color: black" id="score"> <Strong>Puntaje: 0</Strong></p>
+        <div id="score-container">
+            <p style="color: black" id="score"> <Strong>Puntaje: 0</Strong></p>
+        </div>
         <audio id="note-a-audio" src="imgs/notaJuego1.mp3"></audio>
         <audio id="note-s-audio" src="imgs/notaJuego2.mp3"></audio>
         <audio id="note-j-audio" src="imgs/notaJuego3.mp3"></audio>
         <audio id="note-k-audio" src="imgs/notaJuego4.mp3"></audio>
-        
     </div>
-
 </body>
 
 </html>
